--- a/.github/workflows/update-cache.yml
+++ b/.github/workflows/update-cache.yml
@@ -4,6 +4,7 @@ jobs:
   run-build-sh:
     runs-on: ubuntu-20.04
     steps:
+      - uses: actions/checkout@v2
       - uses: rhysd/action-setup-vim@v1
         with:
           neovim: true
